--- a/index.html
+++ b/index.html
@@ -3,32 +3,55 @@
   <head>
     <title>Test Page: Don't Panic</title>
     <meta charset="utf-8">
+    <style>
+      a {
+        color: red
+      }
+      #exec-bio {
+        background-color: lightgray;
+      }
+      #note-bio {
+        background-color: orange;
+      }
+      .bio-box {
+        border: 1px solid black;
+      }
+      .new-box{
+        background-color: azure;
+      }
+      .bio-box a {
+        color: green;
+      }
+    </style>
   </head>
   <body>
     <h1>I'm an h1</h1>
     <ul>
+    <div id="note-bio">
       <li>
-        <a href="http://example.com/" style="color: red;">Link</a>
+        <a href="http://example.com/">Link</a>
+      </li>
+    </div>
+      <li>
+        <a href="http://example.com/">Link</a>
       </li>
       <li>
-        <a href="http://example.com/" style="color: red;">Link</a>
-      </li>
-      <li>
-        <a href="http://example.com/" style="color: red;">Link</a>
+        <a href="http://example.com/">Link</a>
       </li>
     </ul>
+
     <h2>I'm an h2</h2>
-    <div style="border: 1px solid black;">
-      <a href="http://example.com/" style="color: green;">I'm a link</a>
+    <div id="exec-bio" class="bio-box new-box">
+      <a href="http://example.com/">I'm a link</a>
     </div>
-    <div style="border: 1px solid black;">
-      <a href="http://example.com/" style="color: green;">I'm a link</a>
+    <div class="bio-box new-box">
+      <a href="http://example.com/">I'm a link</a>
     </div>
-    <div style="border: 1px solid black;">
-      <a href="http://example.com/" style="color: green;">I'm a link</a>
+    <div class="bio-box new-box">
+      <a href="http://example.com/">I'm a link</a>
     </div>
-    <div style="border: 1px solid black;">
-      <a href="http://example.com/" style="color: green;">I'm a link</a>
+    <div class="bio-box new-box">
+      <a href="http://example.com/">I'm a link</a>
     </div>
   </body>
 </html>
